# link2md

./: .gitignore  LICENSE  README.md  link2md.py  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml
tests/: test_link2md.py
