[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "link2md"
version = "0.1.0"
description = "Convert Xiaohongshu, Bilibili, and Douyin links into Markdown notes."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "merrier", email = "zyue0119@163.com" }]
keywords = ["markdown", "xiaohongshu", "bilibili", "douyin", "transcription", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]

[project.scripts]
link2md = "link2md:main"

[project.optional-dependencies]
browser = ["playwright>=1.40"]

[project.urls]
Homepage = "https://github.com/merrier/link2md"
Repository = "https://github.com/merrier/link2md"
Issues = "https://github.com/merrier/link2md/issues"

[tool.setuptools]
py-modules = ["link2md"]
